# KAssetManager

./: .clang-tidy  .eslintrc.json  .gitignore  .gitmodules  AGENTS.md  API_REFERENCE.md  Although all the debuging and loging and.md  CHANGELOG.md  CODEBASE_REVIEW_REPORT.md  CODE_REVIEW_REPORT.md  COMPLETE-SUMMARY.md  DEVELOPER_GUIDE.md  EVERYTHING_SEARCH_INTEGRATION.md  FINAL-REPORT.md  HARDENING_PLAN.md  INSTALL.md  INSTALLER-PLAN.md  INTELLIGENT_FEATURES.md  LICENSE.txt  LIVE-SCRUBBING-PLAN.md  LIVE-SCRUBBING-TASKS.md  MAINWINDOW_REFACTORING_PLAN.md  NEW_FEATURES.md  PERFORMANCE_OPTIMIZATIONS.md  PLAN.md  PRD.md  PROJECT_FOLDERS_FEATURE.md  QT6-REFACTOR-PLAN.md  README.md  REFACTORING_PROGRESS_AND_PLAN_2025-11-09.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.3.0.md  SETUP-WINDOWS.md  TASKS.md  TECH.md  TECHNICAL_STATUS_REPORT.md  USER_GUIDE.md  build_output.txt  qdebug_list.csv  setup-windows.ps1  (+3 more)
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
.kilocode/: mcp.json
docs/: ARCHITECTURE.md  DEPENDENCIES.md  DEVELOPER_GUIDE.md  INSTALL.md  USER_GUIDE.md
installer/: kassetmanager.nsi
native/qt6/: CMakeLists.txt  CMakePresets.json  README.md
native/qt6/cmake/: DeployQt.cmake
native/qt6/qml/: AppState.qml  FiltersPanel.qml  Main.qml  Theme.qml
native/qt6/qml/controls/: ShButton.qml
native/qt6/src/: app.rc  assets_model.cpp  assets_model.h  assets_table_model.h  bulk_rename_dialog.cpp  bulk_rename_dialog.h  context_preserver.cpp  context_preserver.h  database_health_agent.cpp  database_health_agent.h  database_health_dialog.cpp  database_health_dialog.h  db.cpp  db.h  drag_utils.cpp  drag_utils.h  everything_search.cpp  everything_search.h  everything_search_dialog.cpp  everything_search_dialog.h  ffmpeg_video_reader.cpp  ffmpeg_video_reader.h  file_ops.cpp  file_ops.h  file_ops_dialog.cpp  file_ops_dialog.h  file_utils.h  import_progress_dialog.cpp  import_progress_dialog.h  importer.cpp  importer.h  live_preview_manager.cpp  live_preview_manager.h  live_preview_manager_slots.cpp  log_manager.cpp  log_manager.h  log_viewer_widget.cpp  log_viewer_widget.h  main.cpp  mainwindow.cpp  (+32 more)
native/qt6/src/media/: ffmpeg_player.cpp  ffmpeg_player.h  gstreamer_player.cpp  gstreamer_player.h
native/qt6/src/ui/: file_type_helpers.cpp  file_type_helpers.h  icon_helpers.cpp  icon_helpers.h  preview_helpers.cpp  preview_helpers.h
native/qt6/src/widgets/: asset_grid_view.cpp  asset_grid_view.h  asset_item_delegate.cpp  asset_item_delegate.h  file_manager_widget.cpp  file_manager_widget.h  file_manager_widget_fixed.cpp  file_manager_widget_rebuilt.cpp  fm_drag_views.cpp  fm_drag_views.h  fm_icon_provider.cpp  fm_icon_provider.h  fm_item_delegate.cpp  fm_item_delegate.h  grid_scrub_controller.cpp  grid_scrub_controller.h  grid_scrub_overlay.cpp  grid_scrub_overlay.h  sequence_grouping_proxy_model.cpp  sequence_grouping_proxy_model.h
native/qt6/tests/: CMakeLists.txt  test_db.cpp  test_importer.cpp  test_live_preview_manager.cpp  test_media_converter_worker.cpp  test_models.cpp  test_sequence_detector.cpp  test_simple.cpp  test_utils.cpp
scripts/: append_tasks.ps1  build-installer.ps1  build-windows.ps1  convert-icon.ps1  download-everything-sdk.ps1  fetch-ffmpeg.ps1  fix-file-encoding.ps1  prepare-dependencies.ps1  test-cleanup.ps1  test-setup.ps1
test-data/: pids.txt
test-data/postgresql/: postgresql.conf  postmaster.opts  postmaster.pid
test-data/postgresql/base/25459/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  14928  14928_fsm  14928_vm  14932  14933  14933_fsm  14933_vm  14938  14938_fsm  14938_vm  14942  14943  14943_fsm  14943_vm  14947  174  175  2187  2228  25471  25478  25479  25481  25482  25490  25492  (+261 more)
test-data/postgresql/base/5/: 1259  pg_internal.init
test-data/postgresql/global/: 1214  1214_vm  1232  1233  1260  1260_vm  1262  2671  2672  2676  2677  config_exec_params  pg_control  pg_internal.init
test-data/postgresql/pg_multixact/members/: 0000
test-data/postgresql/pg_multixact/offsets/: 0000
test-data/postgresql/pg_xact/: 0000
test-data/redis/: dump.rdb
